--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,24 +37,24 @@
     "vinxi": "0.4.3"
   },
   "devDependencies": {
-    "vite": "5.4.11",
     "@biomejs/biome": "^2.3.10",
-    "@playwright/test": "^1.49.1",
-    "@types/node": "^22.10.2",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.17",
-    "typescript": "^5.7.2",
-    "vite-plugin-solid": "2.10.2",
-    "vitest": "^2.1.8",
-    "storybook": "^10.1.11",
-    "storybook-solidjs-vite": "^10.0.9",
     "@chromatic-com/storybook": "^4.1.3",
-    "@storybook/addon-vitest": "^10.1.11",
+    "@playwright/test": "^1.49.1",
     "@storybook/addon-a11y": "^10.1.11",
     "@storybook/addon-docs": "^10.1.11",
-    "playwright": "^1.57.0",
+    "@storybook/addon-vitest": "^10.1.11",
+    "@types/node": "^22.10.2",
     "@vitest/browser": "^2.1.8",
-    "@vitest/coverage-v8": "^2.1.8"
+    "@vitest/coverage-v8": "^2.1.8",
+    "autoprefixer": "^10.4.20",
+    "playwright": "^1.57.0",
+    "postcss": "^8.4.49",
+    "storybook": "^10.1.11",
+    "storybook-solidjs-vite": "^10.0.9",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.7.2",
+    "vite": "5.4.11",
+    "vite-plugin-solid": "2.10.2",
+    "vitest": "^2.1.8"
   }
 }
