Add Periodical tasks

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "@tanstack/electric-db-collection": "^0.2.20",
     "@tanstack/solid-db": "^0.1.59",
     "@thisbeyond/solid-dnd": "^0.7.5",
+    "cronstrue": "^3.9.0",
     "marked": "^17.0.1",
     "phoenix": "^1.8.3",
     "solid-js": "^1.9.10",
