Fix biome check issues

--- a/frontend/biome.json
+++ b/frontend/biome.json
@@ -7,13 +7,17 @@
   },
   "files": {
     "ignoreUnknown": true,
-    "includes": ["**/*.ts", "**/*.tsx", "**/*.js", "**/*.jsx", "**/*.json"],
-    "experimentalScannerIgnores": [
-      "node_modules",
-      "dist",
-      ".vinxi",
-      ".output",
-      "src/lib/generated"
+    "includes": [
+      "**/*.ts",
+      "**/*.tsx",
+      "**/*.js",
+      "**/*.jsx",
+      "**/*.json",
+      "!**/node_modules",
+      "!**/dist",
+      "!**/.vinxi",
+      "!**/.output",
+      "!**/src/lib/generated"
     ]
   },
   "formatter": {
