--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "test:watch": "vitest",
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
+    "test:e2e:prod": "PROD_E2E=true playwright test --config playwright.prod.config.ts",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
