--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,9 @@ backend/tmp/
 backend/viban-*.tar
 backend/priv/static/assets/
 backend/priv/static/cache_manifest.json
+backend/priv/static/_build/
+backend/priv/static/index.html
+backend/burrito_out/
 
 # Node.js
 frontend/node_modules/
