Add npm wrapper for easy deployment distribution

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ frontend/.vinxi/
 frontend/.output/
 frontend/test-results/
 frontend/playwright-report/
+npm-wrapper/node_modules/
 
 # Docs
 docs/node_modules/
