--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,7 +36,8 @@
     "marked": "^17.0.1",
     "phoenix": "^1.8.3",
     "solid-js": "^1.9.10",
-    "vinxi": "0.4.3"
+    "vinxi": "0.4.3",
+    "zod": "^4.3.5"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.3.10",
@@ -45,6 +46,7 @@
     "@storybook/addon-a11y": "^10.1.11",
     "@storybook/addon-docs": "^10.1.11",
     "@storybook/addon-vitest": "^10.1.11",
+    "@types/bun": "^1.3.6",
     "@types/node": "^22.10.2",
     "@vitest/browser": "^2.1.8",
     "@vitest/coverage-v8": "^2.1.8",
